bases/apps/otpcloud/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: otpcloud
    app.kubernetes.io/name: otpcloud
  name: otpcloud
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: otpcloud
      app.kubernetes.io/name: otpcloud
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: otpcloud
        app.kubernetes.io/name: otpcloud
    spec:
      containers:
      - image: kmjayadeep/otpcloud:0.2
        imagePullPolicy: IfNotPresent
        name: otpcloud
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
